--- a/app/assets/stylesheets/modules/_tasks.scss
+++ b/app/assets/stylesheets/modules/_tasks.scss
@@ -55,17 +55,30 @@
       &--box {
         height: 100px;
         width: 1050px;
-        padding: 10px 10px;
-        margin-bottom: 30px;
-        margin-left: auto;
-        margin-right: auto;
-        background-color: #dddddd;
+        background-color: white;
+        &--nameBox {
+          height: 40px;
+          display: flex;
+          justify-content: space-between;
+          &--acount {
+            height: 30px;
+            width: 100px;
+            font-size: 20px;
+            padding-left: 10px;
+          }
+          &--date {
+            height: 30px;
+            width: 150px;
+            font-size: 15px;
+            padding-right: 10px;
+          }
+        }
         &--input {
           height: 80px;
-          width: 1030px;
-          padding: 10px 10px;
-          font-size: 20px;
-          background-color: white;
+          &--output {
+            padding: 10px 10px;
+            font-size: 20px;
+          }
         }
       }
     }
@@ -73,25 +86,6 @@
       height: 150px;
       background-color: #0065CB;
       padding: 30px 30px;
-      &--box {
-        display: flex;
-        &--text {
-          height: 80px;
-          width: 80%;
-          padding: 10px 10px;
-          font-size: 20px;
-          margin-right: 10px;
-          border: none;
-          border-radius: 10px;
-          background-color: #CCF5FF;
-        }
-        &--btn {
-          height: 80px;
-          width: 100px;
-          border: none;
-          border-radius: 10px;
-        }
-      }
     }
   }
   .side {
